# vacuum-im

./: CMakeLists.txt
src/definitions/: CMakeLists.txt  version.h
src/interfaces/: ipluginmanager.h
src/loader/: CMakeLists.txt  main.cpp  pluginmanager.cpp  pluginmanager.h
src/make/: abi_version  config.cmake  config.inc  vacuum_version  version.cmake  version.pri
src/plugins/: plugins.cmake
src/plugins/adiummessagestyle/: adiummessagestyle.cpp  adiummessagestyle.h  adiummessagestyleplugin.cpp  adiummessagestyleplugin.h
src/plugins/simplemessagestyle/: simplemessagestyle.cpp  simplemessagestyle.h  simplemessagestyleplugin.cpp  simplemessagestyleplugin.h
src/utils/: CMakeLists.txt
